feat(ClusterServiceCommandHost): ✨ 重构集群服务命令主机服务层与接口
重构集群服务命令主机相关模块，引入DTO/VO模式优化代码结构和服务交互

1. 新增ClusterServiceCommandHostDTO和ClusterServiceCommandHostVO数据传输对象
2. 重写服务层接口，使用MyBatis-Flex框架实现基础CRUD
3. 添加转换器(Converter)处理实体与DTO/VO之间的转换
4. 控制器层适配新的服务接口，提供更规范的REST API
5. 完善业务方法，如计算实时进度、处理失败/取消主机命令等

该重构提升代码可维护性，统一接口规范，并为后续功能扩展打下基础

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>